--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+<%= @profile['name'] %>
+
+<% @friends.each do |friend| %>
+	<p><%= friend['name'] %></p>
+<% end %>
+
